--- a/HW3_Crafty_Rain/index.html
+++ b/HW3_Crafty_Rain/index.html
@@ -6,11 +6,14 @@
         {
           border:solid 1px black;
           border-radius:8px;
+          background-image: url("stormy_BG.jpg");
+          background-repeat: no-repeat;
         }
       </style>
+      <audio src="Single-thunder-sound.mp3" type="audio/mpeg" controls="controls" autoplay></audio>
   </head>
   <body>
-    <div id="game" style="margin:0 auto;"></div>
+    <div id="game" style="margin:0 auto;" ></div>
     <script type="text/javascript" src="crafty-min.js"></script>
     <script type="text/javascript" src="javascript.js"></script>
     <!--<script type="text/javascript" src="https://rawgithub.com/craftyjs/Crafty/release/dist/crafty-min.js"></script>-->
